2014-02-xx 0.5.8 TVxb support
				 Structured config page with built-in plausibility control

2014-02-01 0.5.7 Table length will be saved
                 Plausibility check for server port and bind address added
                 Gear icon in Chrome fixed
                 Synology shortcut fixes
                 Channel URL length increased to 255
                 Small playlist fixes

2013-12-22 0.5.6 Favicon added
                 Menu icons added
                 Few fixes on XMLTV

2013-12-11 0.5.5 Installation bug, sorry!!

2013-12-10 0.5.4 EPG removal bug fixed

2013-11-20 0.5.3 EPG view is now configurable. Please check the 'Config' page for this option
                 EPG grab can now be switched directly 
                 Records can also be created at the channel page
                 New view 'EPG list' has been added

2013-10-20 0.5.2 Extended EPG grab support. Please check About page
                 Highlight events being recorded in EPG
                 Automatic timed EPG grab (see config)
                 Stream link at every page to use with video players and browser plugins
                 Several bug fixes
                 Debug buttons moved to config page 

2013-08-19 0.5.1 EPG grabbing beta

2013-08-19 0.5.0 Channel editing and moving added
                 Channel list can now be exported and saved
                 Record editing added
                 Disabling/deleting channels also disable/delete all their records 
                 Several bug fixes & dialog optimisation

2013-05-27 0.4.8 URL length fixed / increased to 255

2013-03-07 0.4.7 Recurrent FFMPEG records added/fixed 

2013-02-19 0.4.6 Stream types, which should be forwarded to ffmpeg, are now configurable
                 ffmpeg output attributes now changeable
                 Please check 'About' page for further info regarding ffmpeg support

2013-02-13 0.4.5 Channel file extension added
                 Experimental ffmpeg support for rtmp streams